2008-08-24  Adam Nemet  <anemet@caviumnetworks.com>

	* config.gcc (mips64*-*-linux*): Handle mips64octeon*-*-linux*.
	* config/mips/mips.h (enum processor_type): Add PROCESSOR_OCTEON.
	(TARGET_OCTEON): New macro.
	(TARGET_CPU_CPP_BUILTINS): Define __OCTEON__ for Octeon.
	(MIPS_ISA_LEVEL_SPEC, MIPS_ARCH_FLOAT_SPEC): Handle -march=octeon.
	(ISA_HAS_POP): New macro.
	* config/mips/driver-native.c (host_detect_local_cpu): Handle
	Octeon.
	* config/mips/mips.c (mips_cpu_info_table, mips_rtx_cost_data):
	Handle Octeon.
	* config/mips/mips.md (cpu): Add octeon.
	(type): Add pop attribute value.
	(popcount<mode>2): New pattern.
	* doc/invoke.texi (-march=@var{arch}): Add octeon.

2008-08-24  Jan Hubicka  <jh@suse.cz>

	* doc/invoke.texi (-fipa-cp-clone): New option.
	(-fipa-cp): Update docs.
	(--param ipcp-unit-growth):New.
	* ipa-cp.c: Include fibheap.h, params.h
	(ipcp_initialize_node_lattices): When not cloning, all externally
	visible functions are bottom.
	(ipcp_need_redirect_p): Accept clones.
	(ipcp_insert_stage): Use cost driven heuristics.
	(max_count, dead_nodes): New static vars.
	(ipcp_need_original_clone_p, ipcp_estimate_cloning_cost,
	ipcp_const_param_count): New functions.
	* common.opt (ipa-cp-clone): New command line option.
	* params.def (ipcp-unit-growth): New.

2008-08-24  Jan Hubicka  <jh@suse.cz>

	* tree-inline.c (tree_function_versioning): Look harder
	for referenced vars.

2008-08-24  Razya Ladelsky  <razya@il.ibm.com>

        PR tree-optimization/37185
        * matrix-reorg.c (transform_access_sites): Update changed stmt.

2008-08-23  Jan Hubicka  <jh@suse.cz>

	* ipa-cp.c (ipcp_analyze_node): New function.
	(ipcp_update_cloned_node): Use it.
	(ipcp_init_stage): Likewise.
	* ipa-inline.c (function_insertion_hook_holder): New static var.
	(analyze_function): Break out from ....
	(inline_generate_summary): Here; register insertion hook.
	(cgraph_decide_inlining): Remove hook.
	(add_new_function): New function.
